# cosmos-upgrades

./: .env  .gitignore  Dockerfile  README.md  app.py  config.yml  diagnose_network.py  docker-compose.yaml  good-app.py  import os.py  modern-app.py  old-app.py  private_endpoints.json  pyproject.toml  requirements.txt  upgrades.sh
.github/workflows/: ci.yml  docker-build.yaml  docker.yaml
integrations/google-calendar-urls/: app.py
networks.d/: akash.yml
utils/: progress.py  upgrade_checker.py
