[project]
name = "cosmos-upgrades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask==2.1.1",
    "flask-caching==2.0.2",
    "gunicorn==20.1.0",
    "loguru>=0.7.3",
    "pillow>=11.2.1",
    "requests==2.26.0",
    "semantic-version==2.10.0",
    "urllib3==1.26.7",
    "werkzeug==2.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 120
